62

* #2910 Open popups in the current window (marco)
* Add agent-stylesheet.css and support for blocking flash. (tomeu)
* Add support for agent and user stylesheets. (tomeu)

61

* Adopted to the latest actviity launch changes (erikos)
* Took the import of securitydialog out (erikos)

60

* Limit to 15 entries in the palette of the back/forward buttons (erikos)
* Always start at the first toolbar page (erikos)

59

* Add several ogg subtypes (marco)

57

* Fix a typo, make mime types actually work (marco)

56

* Add more ogg mime types (marco)

55

* Backward compatibility of journal entries to trial-2 (erikos)

54

* Update spanish translation.

53

* Make hide/show of the treay one button #3475 (erikos)

52

* Fix for when participant leaves (erikos)
* #3347 Advertise ogg and wav mime types (marco)
* Added the buttons for hide/show tray (erikos)

51

* #3339 Add some mime types web-activity can handle (marco)
* Added support for the view source key fn+space (erikos)

50

* View source for Browse
  With the ctrl+u command does load the current page from the cache and 
  launches write to display it #3261 (erikos)
* Changed the show/hide frame key to be ctrl+v for visibility (erikos)
  
49

* Added missing fill_color in icon (erikos)
* #2555: Report download progress to the Journal via the DataStore. (tomeu)

48

* New activity icon, Fix for #2829 (erikos)

47

* redesign when members leave and rejoin, added timestamp to be 
able to bring the links in the right order, you can not add alink 
twice unless you deleted it already, links are added to the tray 
on the right side (erikos)

46
* fix for gray page when resuming from journal (erikos)
* #2327 Unescape the URI to display it in the address bar (marco)
* fixed memory consuption when creating shared links 
  by calling the garbage collector (erikos)

45

* use json for storing the history and the shared
  link information to the journal (erikos)
* use sugar tray which enables scrolling for the links (erikos)