@@ -1,3 +1,5 @@
+* #3552: Cancel a donwload when the related journal entry is deleted. (tomeu)
+
 62
 
 * #2910 Open popups in the current window (marco)
